Bug 424539 - Opacity keyframes not saving
Summary: Opacity keyframes not saving
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 4.3.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Eoin O'Neill
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-22 14:32 UTC by victorhugodias1
Modified: 2020-07-29 05:26 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description victorhugodias1 2020-07-22 14:32:43 UTC
SUMMARY
When animating, created opacity keyframes on layer groups do not save along with everything else, and are just gone when i reopen the document.

STEPS TO REPRODUCE
1. open a file in krita.
2. make a layer group.
3. in the timeline, add an opacity keyframe to that layer group.
4. save and close the file.
5. reopen it.

OBSERVED RESULT
opacity keyframes are gone.

EXPECTED RESULT
for them to not be gone.

SOFTWARE/OS VERSIONS
Windows: 10
Comment 1 Ahab Greybeard 2020-07-23 11:39:01 UTC
I can confirm this for appimages 4.2.6 to the latest Jul 22 5.0.0 prealpha.

After a Save and re-Open, the opacity of the group layer is set to the opacity of whatever frame was selected when saved.

As a separate but possibly related bug, if a single opacity keyframe is put onto any layer or group layer, it can't be removed and the layer opacity is then controlled by the opacity keyframe and vice-versa.
This is maintained on a paint layer after a Save but not on a group layer.
Comment 2 Eoin O'Neill 2020-07-28 21:23:40 UTC
Git commit f7a80c5d8d29077d7a22f97b3371a9bb62fdc3c5 by Eoin O'Neill.
Committed on 28/07/2020 at 21:19.
Pushed by eoinoneill into branch 'krita/4.3'.

Fix Loading Group Node Opacity Keyframes.

Original Cause: KraLoadVisitor::visit(KisGroupLayer*) wasn't calling loadNodeKeyframes,
resulting in loss of data on load.

M  +2    -0    plugins/impex/libkra/kis_kra_load_visitor.cpp

https://invent.kde.org/graphics/krita/commit/f7a80c5d8d29077d7a22f97b3371a9bb62fdc3c5
Comment 3 Eoin O'Neill 2020-07-29 05:26:48 UTC
Git commit 557905903ed08d05d397d04c7a52d0acfb9dff46 by Eoin O'Neill.
Committed on 29/07/2020 at 03:43.
Pushed by eoinoneill into branch 'master'.

Fix Loading Group Node Opacity Keyframes.

Original Cause: KraLoadVisitor::visit(KisGroupLayer*) wasn't calling loadNodeKeyframes,
resulting in loss of data on load.
(cherry picked from commit f7a80c5d8d29077d7a22f97b3371a9bb62fdc3c5)

M  +2    -0    plugins/impex/libkra/kis_kra_load_visitor.cpp

https://invent.kde.org/graphics/krita/commit/557905903ed08d05d397d04c7a52d0acfb9dff46