Fix Loading Group Node Opacity Keyframes.

Original Cause: KraLoadVisitor::visit(KisGroupLayer*) wasn't calling loadNodeKeyframes,
resulting in loss of data on load.

BUG:424539
(cherry picked from commit f7a80c5d8d29077d7a22f97b3371a9bb62fdc3c5)